--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_svg: ^0.19.2+1
+  url_launcher: ^5.7.10
   flutter:
     sdk: flutter
-  flutter_svg: ^0.19.2+1
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
