--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter_svg: ^0.19.2+1
   url_launcher: ^5.7.10
+  shared_preferences: ^0.4.3
   flutter:
     sdk: flutter
 
