--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_svg: ^0.19.2+1
   url_launcher: ^5.7.10
   shared_preferences: ^0.4.3
+  auto_size_text: ^2.1.0
   flutter:
     sdk: flutter
 
@@ -71,9 +72,9 @@ flutter:
       fonts:
         - asset: assets/fonts/Pacifico-Regular.ttf
 
-    - family: Anton
+    - family: RockSalt
       fonts:
-        - asset: assets/fonts/Anton-Regular.ttf
+        - asset: assets/fonts/RockSalt-Regular.ttf
 
   #   - family: Schyler
   #     fonts:
